# ml_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ReadData.ipynb  environment.yml  environment_dev.yml  init_dataset.sh  model.ipynb  pyproject.toml  trainrc.toml  urls.toml
configs/: full_train.toml  resnet16.toml  resnet16_mish_preact.toml  resnet16_prelu.toml  resnet18.toml  resnet18_prelu_deep.toml  resnet18_var.toml  resnet_tuning.toml  trainrc.toml
ml_project/: data_downloader.py
notebooks/: classification_viewer.ipynb  network_opti.ipynb  optim.py  romf_opti.py  start_training-Copy1.ipynb  start_training.ipynb
project_presentation/: bib-settings.tex  example.tex  lit.bib
rolf/: __init__.py  _version.py  info.py  version.py
rolf/architecture/: __init__.py  blocks.py  resnet.py  resnet18.py  resnet8.py
rolf/eval/: __init__.py  optim_visualization.py  plotting.py
rolf/io/: __init__.py  data.py  data_downloader.py  download.py  unpack.py  viewer.py
rolf/optim/: __init__.py  rolfo.py
rolf/romf/: __init__.py  _validation.py  data.py  hyper_search.py  model.py
rolf/tools/: __init__.py  get_data.py  rolf_optim.py  rolfo.py  romf.py  romf_opti.py  romf_optim.py  start_training.py  toml_reader.py  train.py  unpack.py  viewer.py
rolf/training/: __init__.py  start_training.py  training.py  utils.py
trained_models/resnet_best/: events.out.tfevents.1722070334.1795927.0  hparams.yaml
