[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rolf"
description = "RadiO gaLaxy classiFication (ROLF) using a ResNet"
readme = "README.md"
authors = [
  {name = "Anno Knierim and Christian Arauner"}
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 3 - Alpha",
]

dynamic = ["version"]
requires-python = ">=3.11"

dependencies = [
  "astropy >=6.1.0",
  "matplotlib ~=3.0",
  "numpy ~=1.16",
  "torch",
  "torchvision",
]

[project.scripts]
rolf-info = "rolf.info:main"
rolf-train = "rolf.tools.train:main"
rolf-data = "rolf.tools.get_data:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "setuptools_scm[toml]",
]

all = [
  "rolf[dev]"
]

[project.urls]
repository = "https://github.com/aknierim/ml_project"

[tool.setuptools_scm]
write_to = "rolf/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",  # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = [
  "ml_project",
]
